# WUB-Lab-exam-suggestion

./: CMakeLists.txt
All Programs/: 1-Arithmetic operations.c  10-Print numbers 1 to 30, skip 5-10 and 20-25 using continue.cpp  11-Calculator using User-Defined Functions.c  12-Factorial Calculator using Function.c  13-Print n x n Square of Stars.c  14-Print Right-Angled Triangle Pattern.c  15-Inverted Right-Angled Triangle (Right-Aligned).c  17-Sum of Two Matrices.c  18-Multiplication Table using For Loop.c  19-Sum of Even Numbers from 1 to N.c  2-Number Comparison Checker.c  20-Print First N Fibonacci Numbers.c  3-Student PassFail Checker.c  4-Even or Odd Checker.c  5-Find the Largest.c  6-Simple Calculator.c  7-Print Numbers from 1 to N.c  8-Student Grade System.c  9-Sum of Array Elements.c  Arithmetic operations.c  Print Right-Angled Triangle Pattern.c
