cmake_minimum_required(VERSION 4.0)
project(WUB_LAB_EXERCISE C)

set(CMAKE_C_STANDARD 11)

add_executable(WUB_LAB_EXERCISE main.c
        "All Programs/Arithmetic operations.c"
        "All Programs/Arithmetic operations.c"
        "All Programs/Number Comparison Checker.c"
        "All Programs/Student PassFail Checker.c"
        "All Programs/Even or Odd Checker.c"
        "All Programs/Find the Largest.c"
        "All Programs/Simple Calculator.c"
        "All Programs/Print Numbers from 1 to N.c"
        "All Programs/Student Grade System.c"
        "All Programs/Sum of Array Elements.c"
        "All Programs/Print numbers 1 to 30, skip 5-10 and 20-25 using continue.cpp"
        "All Programs/Calculator using User-Defined Functions.c"
        "All Programs/Factorial Calculator using Function.c"
        "All Programs/Print n x n Square of Stars.cpp"
        "All Programs/Print Right-Angled Triangle Pattern.c"
        "All Programs/Inverted Right-Angled Triangle (Right-Aligned).c"
        "All Programs/2D Array - Input and Display Elements.c"
        "All Programs/Sum of Two Matrices.c"
        "All Programs/Multiplication Table using For Loop.c"
        "All Programs/Sum of Even Numbers from 1 to N.c"
        "All Programs/Print First N Fibonacci Numbers.c")
