cmake_minimum_required(VERSION 4.0)
project(WUB_LAB_EXERCISE C)

set(CMAKE_C_STANDARD 11)

add_executable(WUB_LAB_EXERCISE main.c
        "All Programs/1-Arithmetic operations.c"
        "All Programs/1-Arithmetic operations.c"
        "All Programs/2-Number Comparison Checker.c"
        "All Programs/3-Student PassFail Checker.c"
        "All Programs/4-Even or Odd Checker.c"
        "All Programs/5-Find the Largest.c"
        "All Programs/6-Simple Calculator.c"
        "All Programs/7-Print Numbers from 1 to N.c"
        "All Programs/8-Student Grade System.c"
        "All Programs/9-Sum of Array Elements.c"
        "All Programs/10-Print numbers 1 to 30, skip 5-10 and 20-25 using continue.cpp"
        "All Programs/11-Calculator using User-Defined Functions.c"
        "All Programs/12-Factorial Calculator using Function.c"
        "All Programs/13-Print n x n Square of Stars.c"
        "All Programs/14-Print Right-Angled Triangle Pattern.c"
        "All Programs/15-Inverted Right-Angled Triangle (Right-Aligned).c"
        "All Programs/16-2D Array - Input and Display Elements.c"
        "All Programs/17-Sum of Two Matrices.c"
        "All Programs/18-Multiplication Table using For Loop.c"
        "All Programs/19-Sum of Even Numbers from 1 to N.c"
        "All Programs/20-Print First N Fibonacci Numbers.c")
